Bug #83803 --> Add support for dragging mail attachments to the desktop (or a folder) for OSX and Win32. We now save the file instead of a saving a shortcut.

sr= bienvenu